--- a/数据结构/data_structure/pom.xml
+++ b/数据结构/data_structure/pom.xml
@@ -44,6 +44,11 @@
             <version>1.2.11</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.2</version>
+        </dependency>
     </dependencies>
 
     <build>
